--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -24,6 +24,23 @@
   }
 }
 
+.cart-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.remove-all-btn {
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 16px;
+  color: #0b69ff;
+  cursor: pointer;
+}
+
 .cart-heading {
   color: #3e4c59;
   font-family: 'Roboto';
@@ -38,16 +55,3 @@
 }
 
 /* Write your CSS here */
-
-.remove-btn-card {
-  text-align: right;
-}
-
-.remove-btn {
-  background-color: transparent;
-  color: #0b69ff;
-  font-family: Roboto;
-  border: 0;
-  font-weight: 600;
-  cursor: pointer;
-}
