--- a/src/components/CartSummary/index.css
+++ b/src/components/CartSummary/index.css
@@ -1,28 +1,57 @@
 /* Write your CSS here */
-
 .cart-summary-container {
   display: flex;
+  justify-content: flex-end;
+}
+
+.cart-summary-card {
+  display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  align-self: flex-end;
-  margin-bottom: 40px;
 }
 
-.checkout-btn {
-  background-color: #0b69ff;
-  color: #ffffff;
-  width: 150px;
-  height: 30px;
-  border: 0;
-  border-radius: 8px;
-}
-
-.name-color {
+.cart-items-total-price {
+  margin: 0;
+  font-family: 'Roboto';
+  font-size: 25px;
   color: #616e7c;
 }
 
-.price {
+.cart-items-total-price span {
+  font-size: 28px;
   color: #171f46;
-  font-size: 35px;
+}
+
+.cart-items-count {
+  color: #616e7c;
+  font-size: 16px;
+  font-family: 'Roboto';
+  font-weight: 500;
+  margin: 5px 0 25px;
+}
+
+.checkout-btn {
+  padding: 12px;
+  background-color: #0b69ff;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  color: #fff;
+  font-family: 'Roboto';
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.popup-content {
+  /* width: 100%; */
+  /* height: 100%; */
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-overlay {
+  background: rgba(0, 0, 0, 0.2);
 }
