--- a/src/components/LoginForm/index.css
+++ b/src/components/LoginForm/index.css
@@ -128,7 +128,7 @@
 
 .error-message {
   align-self: start;
-
+  font-size: 12px;
   margin-top: 3px;
   margin-bottom: 0px;
   font-family: 'Roboto';
